--- a/src/app/songs/pages/search-page/search-page.component.html
+++ b/src/app/songs/pages/search-page/search-page.component.html
@@ -1,1 +1,34 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+  <h3>Search Song</h3>
+
+  <mat-form-field>
+    <mat-label>Search a Song</mat-label>
+      <input
+        type="text"
+        matInput
+        [formControl]="searchInput"
+        placeholder="Search your favorite song"
+        (input)="searchSong()"
+        [matAutocomplete]="auto"
+      />
+
+      <mat-autocomplete autoActiveFirstOption
+            #auto="matAutocomplete"
+            (optionSelected)="onSelectedOption($event)"
+            >
+          <mat-option *ngFor="let song of songs " [value]="song">
+                {{ song.title }}
+          </mat-option>
+
+          <mat-option
+            *ngIf="songs.length === 0 && searchInput.value  && searchInput.value.length > 0"
+            value="">
+            Song not found {{searchInput.value}}
+          </mat-option>
+      </mat-autocomplete>
+  </mat-form-field>
+
+
+  {{selectedSong | json}}
+
+</div>
